[package]
name = "forward_market_contract"
version = "0.1.1"
authors = ["Jordon Tolotti <jtolotti@figure.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[package.metadata.scripts]
optimize = """docker run --rm -v "$(pwd)":/code \
  --mount type=volume,source="$(basename "$(pwd)")_cache",target=/target \
  --mount type=volume,source=registry_cache,target=/usr/local/cargo/registry \
  cosmwasm/optimizer:0.15.0
"""

[dependencies]
cosmwasm-schema = "1.2.8"
cosmwasm-std = { version = "1.2.5", features = ["stargate"]}
cw-storage-plus = "1.1.0"
cw2 = "1.0.0"
schemars = "0.8.15"
serde = { version = "1.0.189", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.49" }
provwasm-std = { version = "=2.1.0"}
sha2 = "0.10.8"
hex = "0.4.3"
bech32 = "0.9.1"
rust_decimal = "1.29.0"
uuid = { version = "1.7.0", features = ["v1"] }

[dev-dependencies]
provwasm-mocks = { version = "=2.1.0" }
prost = { version = "=0.11.9", default-features = false }
